@@ -362,7 +362,7 @@ s390_elf_ldisp_reloc (bfd *abfd ATTRIBUTE_UNUSED,
   reloc_howto_type *howto = reloc_entry->howto;
   bfd_vma relocation;
   bfd_vma insn;
-
+  
   if (output_bfd != (bfd *) NULL
       && (symbol->flags & BSF_SECTION_SYM) == 0
       && (! howto->partial_inplace
@@ -371,13 +371,13 @@ s390_elf_ldisp_reloc (bfd *abfd ATTRIBUTE_UNUSED,
       reloc_entry->address += input_section->output_offset;
       return bfd_reloc_ok;
     }
-
+  
   if (output_bfd != NULL)
     return bfd_reloc_continue;
-
+  
   if (reloc_entry->address > bfd_get_section_limit (abfd, input_section))
     return bfd_reloc_outofrange;
-
+  
   relocation = (symbol->value
 		+ symbol->section->output_section->vma
 		+ symbol->section->output_offset);
@@ -388,11 +388,11 @@ s390_elf_ldisp_reloc (bfd *abfd ATTRIBUTE_UNUSED,
 		     + input_section->output_offset);
       relocation -= reloc_entry->address;
     }
-
+  
   insn = bfd_get_32 (abfd, (bfd_byte *) data + reloc_entry->address);
   insn |= (relocation & 0xfff) << 16 | (relocation & 0xff000) >> 4;
   bfd_put_32 (abfd, insn, (bfd_byte *) data + reloc_entry->address);
-
+  
   if ((bfd_signed_vma) relocation < - 0x80000
       || (bfd_signed_vma) relocation > 0x7ffff)
     return bfd_reloc_overflow;
@@ -2352,10 +2352,6 @@ elf_s390_relocate_section (bfd *output_bfd,
 
 	      switch (r_type)
 		{
-		case R_390_PLTOFF16:
-		case R_390_PLTOFF32:
-		  relocation -= htab->elf.sgot->output_section->vma;
-		  break;
 		case R_390_GOTPLT12:
 		case R_390_GOTPLT16:
 		case R_390_GOTPLT20:
@@ -2632,9 +2628,9 @@ elf_s390_relocate_section (bfd *output_bfd,
 
 	  /* For local symbols or if we didn't make a PLT entry for
 	     this symbol resolve the symbol directly.  */
-	  if (h == NULL
+	  if (   h == NULL
 	      || h->plt.offset == (bfd_vma) -1
-	      || (htab->elf.splt == NULL && !s390_is_ifunc_symbol_p (h)))
+	      || htab->elf.splt == NULL)
 	    {
 	      relocation -= htab->elf.sgot->output_section->vma;
 	      break;
@@ -3710,7 +3706,7 @@ elf_s390_finish_dynamic_symbol (bfd *output_bfd,
     }
 
   /* Mark some specially defined symbols as absolute.  */
-  if (h == htab->elf.hdynamic
+  if (strcmp (h->root.root.string, "_DYNAMIC") == 0
       || h == htab->elf.hgot
       || h == htab->elf.hplt)
     sym->st_shndx = SHN_ABS;
