@@ -415,7 +415,7 @@ s390_elf_ldisp_reloc (bfd *abfd,
       relocation -= reloc_entry->address;
     }
 
-  insn = bfd_get_32 (abfd, (bfd_byte *) data + reloc_entry->address);
+  insn = bfd_get_32 (abfd, (bfd_byte *) data + reloc_entry->address); 
   insn |= (relocation & 0xfff) << 16 | (relocation & 0xff000) >> 4;
   bfd_put_32 (abfd, insn, (bfd_byte *) data + reloc_entry->address);
 
@@ -2309,11 +2309,6 @@ elf_s390_relocate_section (bfd *output_bfd,
 
 	      switch (r_type)
 		{
-		case R_390_PLTOFF16:
-		case R_390_PLTOFF32:
-		case R_390_PLTOFF64:
-		  relocation -= htab->elf.sgot->output_section->vma;
-		  break;
 		case R_390_GOTPLT12:
 		case R_390_GOTPLT16:
 		case R_390_GOTPLT20:
@@ -2569,7 +2564,7 @@ elf_s390_relocate_section (bfd *output_bfd,
 	    break;
 
 	  if (h->plt.offset == (bfd_vma) -1
-	      || (htab->elf.splt == NULL && !s390_is_ifunc_symbol_p (h)))
+	      || (htab->elf.splt == NULL && htab->elf.iplt == NULL))
 	    {
 	      /* We didn't make a PLT entry for this symbol.  This
 		 happens when statically linking PIC code, or when
@@ -2595,9 +2590,9 @@ elf_s390_relocate_section (bfd *output_bfd,
 
 	  /* For local symbols or if we didn't make a PLT entry for
 	     this symbol resolve the symbol directly.  */
-	  if (h == NULL
+	  if (   h == NULL
 	      || h->plt.offset == (bfd_vma) -1
-	      || (htab->elf.splt == NULL && !s390_is_ifunc_symbol_p (h)))
+	      || htab->elf.splt == NULL)
 	    {
 	      relocation -= htab->elf.sgot->output_section->vma;
 	      break;
@@ -3514,7 +3509,7 @@ do_glob_dat:
     }
 
   /* Mark some specially defined symbols as absolute.  */
-  if (h == htab->elf.hdynamic
+  if (strcmp (h->root.root.string, "_DYNAMIC") == 0
       || h == htab->elf.hgot
       || h == htab->elf.hplt)
     sym->st_shndx = SHN_ABS;
